# vind

./: CMakeLists.txt  CPPLINT.cfg  README.md
bundle/: .gitignore  CMakeLists.txt  CMakeLists_develop.txt  CMakeLists_ref.txt  CMakeLists_release.txt
src/vind/: CMakeLists.txt  Constants.cc  Constants.h  Covariance.h  Fields.cc  Fields.h  GeoVaLs.cc  GeoVaLs.h  Geometry.cc  Geometry.h  GeometryIterator.cc  GeometryIterator.h  GeometryParameters.h  HorizScaleDecomposition.h  HybridWeight.cc  HybridWeight.h  IncrEnsCtlVec.h  IncrModCtlVec.h  Increment.cc  Increment.h  Interpolation.cc  Interpolation.h  Interpolator.h  LinearModel.cc  LinearModel.h  LinearObsOperator.cc  LinearObsOperator.h  LinearVariableChange.cc  LinearVariableChange.h  LinearVariableChangeParameters.h  LocalizationMatrix.h  Locations.cc  Locations.h  Logbook.cc  Logbook.h  Model.cc  Model.h  ModelAuxControl.h  ModelAuxControlEstimator.h  ModelAuxCovariance.h  (+37 more)
src/vind/FieldsIO/: FieldsIOAQ.cc  FieldsIOAQ.h  FieldsIOArome.cc  FieldsIOArome.h  FieldsIOBSC.cc  FieldsIOBSC.h  FieldsIOBase.cc  FieldsIOBase.h  FieldsIOBase.h.patch  FieldsIODefault.cc  FieldsIODefault.cc.patch  FieldsIODefault.h  FieldsIODefault.h.patch  FieldsIOGmsh.cc  FieldsIOGmsh.h  FieldsIOGmsh.h.patch  FieldsIOGrib.cc  FieldsIOGrib.h  fieldsio_arome_fa.h  fieldsio_arome_fa_interface.F90  fieldsio_arome_fa_mod.F90
src/vind/LinearModel/: LinearModelBase.cc  LinearModelBase.h  LinearModelDDL95.cc  LinearModelDDL95.h  LinearModelNumPy.cc  LinearModelNumPy.h  LinearModelNumPyDDL95.cc  LinearModelNumPyDDL95.h  LinearModelPersistence.cc  LinearModelPersistence.h  LinearModelPyTorchDDL95.cc  LinearModelPyTorchDDL95.h  LinearModelPython.cc  LinearModelPython.h
src/vind/Model/: ModelBase.cc  ModelBase.h  ModelDDL95.cc  ModelDDL95.h  ModelNumPy.cc  ModelNumPy.h  ModelNumPyDDL95.cc  ModelNumPyDDL95.h  ModelPersistence.cc  ModelPersistence.h  ModelPyTorchDDL95.cc  ModelPyTorchDDL95.h  ModelPython.cc  ModelPython.h  ModelPythonPyQG.py  ModelTorchDDL95.cc  ModelTorchDDL95.h
src/vind/Python/: .gitignore  ModelPythonDDL95.py  NumPyDDL95.py  PyTorchDDL95.py  PythonInterpreter.cc  PythonInterpreter.h  VenvSitePackages.h.in
test/: CMakeLists.txt
test/aq/: CMakeLists.txt
test/aq/testinput/: 3densvar.yaml  3densvar_lt.yaml  4densvar.yaml  4densvar_lt.yaml  convertstate.yaml  convertstate_logtransf.yaml  dirac_3d.yaml  dirac_4d.yaml  dirac_4d_FL.yaml  dirac_no_loc_3d.yaml  dirac_no_loc_3d_lt.yaml  dirac_no_loc_4d.yaml  dirac_no_loc_4d_id.yaml  ens_mean_variance.yaml  geometry.yaml  hofx3d_constant.yaml  hofx3d_logarithm.yaml  increment.yaml  localization_training.yaml  state.yaml
test/aq/testref/: 3densvar.ref  3densvar_lt.ref  4densvar.ref  4densvar_lt.ref  convertstate.ref  convertstate_logtransf.ref  dirac_3d.ref  dirac_4d.ref  dirac_4d_FL.ref  dirac_no_loc_3d.ref  dirac_no_loc_3d_lt.ref  dirac_no_loc_4d.ref  dirac_no_loc_4d_id.ref  ens_mean_variance.ref  hofx3d_constant.ref  hofx3d_logarithm.ref  increment.ref  state.ref
test/genint/: CMakeLists.txt
test/genint/testinput/: convertstate_nonuni_lonlat.yaml  convertstate_regular_lonlat.yaml  convertstate_varcha_nonuni_lonlat.yaml  convertstate_varcha_regular_lonlat.yaml  geometry_lambertCC.yaml  geometry_regular_lonlat.yaml  hofx3d_lambertCC.yaml  hofx3d_nonuni_lonlat.yaml  hofx3d_regular_lonlat.yaml
test/genint/testref/: convertstate_nonuni_lonlat.ref  convertstate_regular_lonlat.ref  convertstate_varcha_nonuni_lonlat.ref  convertstate_varcha_regular_lonlat.ref  geometry_lambertCC.ref  geometry_regular_lonlat.ref  hofx3d_nonuni_lonlat.ref  hofx3d_regular_lonlat.ref
test/glb/: CMakeLists.txt
test/glb/testinput/: 3densvar.yaml  3dvar.yaml  4densvar.yaml  4densvar_parallel.yaml  4dvar.yaml  4dvar_numpy.yaml  attractor.yaml  background.yaml  ensemble.yaml  letkf_linear.yaml  (+28 more)
test/mains/: CMakeLists.txt  vindTestGeometry.cc  vindTestIncrement.cc  vindTestModel.cc  vindTestModelAuxCovariance.cc  vindTestModelAuxIncrement.cc  vindTestState.cc  vindTestVariableChange.cc
test/monarch/: CMakeLists.txt
test/monglob/: CMakeLists.txt
test/reg/: CMakeLists.txt
test/testinput/: aq_3densvar.yaml  aq_3densvar_lt.yaml  aq_4densvar.yaml  aq_4densvar_lt.yaml  aq_convertstate.yaml  aq_convertstate_logtransf.yaml  aq_dirac_3d.yaml  aq_dirac_4d.yaml  aq_dirac_4d_FL.yaml  aq_dirac_no_loc_3d.yaml  aq_dirac_no_loc_3d_lt.yaml  aq_dirac_no_loc_4d.yaml  aq_dirac_no_loc_4d_id.yaml  aq_ens_mean_variance.yaml  aq_geometry.yaml  aq_hofx3d_constant.yaml  aq_hofx3d_logarithm.yaml  aq_increment.yaml  aq_state.yaml  ddl95_3dvar.yaml  ddl95_4dvar.yaml  ddl95_attractor.yaml  ddl95_background.yaml  ddl95_makeobs.yaml  ddl95_stddev.yaml  ddl95_test_geometry.yaml  ddl95_truth.yaml  genint_convertstate_nonuni_lonlat.yaml  genint_convertstate_regular_lonlat.yaml  genint_convertstate_varcha_nonuni_lonlat.yaml  genint_convertstate_varcha_regular_lonlat.yaml  genint_geometry_lambertCC.yaml  genint_geometry_regular_lonlat.yaml  genint_hofx3d_lambertCC.yaml  genint_hofx3d_nonuni_lonlat.yaml  genint_hofx3d_regular_lonlat.yaml  glb_3densvar.yaml  glb_3dvar.yaml  glb_4densvar.yaml  glb_4densvar_parallel.yaml  (+108 more)
test/testref/: aq_3densvar.ref  aq_3densvar_lt.ref  aq_4densvar.ref  aq_convertstate.ref  aq_convertstate_logtransf.ref  aq_dirac_4d.ref  aq_dirac_no_loc_3d.ref  aq_dirac_no_loc_4d.ref  aq_dirac_no_loc_4d_id.ref  aq_ens_mean_variance.ref  aq_geometry.ref  aq_hofx3d_constant.ref  aq_hofx3d_logarithm.ref  ddl95_3dvar.ref  ddl95_4dvar.ref  ddl95_background.ref  ddl95_makeobs.ref  ddl95_stddev.ref  ddl95_truth.ref  genint_convertstate_nonuni_lonlat.ref  genint_convertstate_regular_lonlat.ref  genint_convertstate_varcha_nonuni_lonlat.ref  genint_convertstate_varcha_regular_lonlat.ref  genint_hofx3d_nonuni_lonlat.ref  glb_3densvar.ref  glb_3dvar.ref  glb_4densvar.ref  glb_4densvar_parallel.ref  glb_4dvar.ref  glb_attractor.ref  glb_background.ref  glb_background_06.ref  glb_background_12.ref  glb_background_18.ref  glb_ensemble.ref  glb_ensemble_06.ref  glb_ensemble_12.ref  glb_ensemble_18.ref  glb_getkf_nonlinear.ref  glb_letkf_linear.ref  (+63 more)
(+350 files in other folders)
